<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="55dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    tools:context=".ui.AddPost.AddPostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_phone_number"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/stroke_background"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/number"
            android:inputType="phone"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="#9F9E9E"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_text_view" />

        <TextView
            android:id="@+id/missing_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/enter_miss"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_edit_text" />

        <Spinner
            android:id="@+id/missing_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/stroke_background"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/missing_text_view" />

        <TextView
            android:id="@+id/missing_image_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/please_enter_missing"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/missing_spinner" />

        <ImageView
            android:id="@+id/missing_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:background="#57000000"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_report_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/missing_image_text_view" />

        <ImageButton
            android:id="@+id/add_image_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_a_photo"
            app:layout_constraintLeft_toRightOf="@id/missing_image_view"
            app:layout_constraintTop_toTopOf="@id/missing_image_view" />

        <ImageButton
            android:id="@+id/add_image_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_photo_alternate"
            app:layout_constraintLeft_toRightOf="@id/missing_image_view"
            app:layout_constraintTop_toBottomOf="@id/add_image_camera" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/missing_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/add_post_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_post"
            android:textColor="#ffff"
            android:background="@color/colorPrimary"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
